Pink channels region in Action Editor #119534

Closed
opened 2024-03-15 19:03:23 +01:00 by williama · 5 comments

System Information
Operating system: macOS-14.3.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Pro 1.2

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-13 14:52, hash: 51a3c030727b
Worked: 4.0.2

Caused by a96f1208cc

Short description of error
If you open the Action Editor with no currently active action, the right-hand view (where the channels would be) displays as all-pink, with no text visible.

Exact steps for others to reproduce the error
Switching to the Action Editor from the Dope Sheet view when there is no current active action makes the channel view area to the right turn pink. You may need to adjust the size of the view to trigger it.

The Dope Sheet and Graph Editor behave properly and display the empty 'Summary' list.

**System Information** Operating system: macOS-14.3.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 Pro 1.2 **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-13 14:52, hash: `51a3c030727b` Worked: 4.0.2 Caused by a96f1208cc **Short description of error** If you open the Action Editor with no currently active action, the right-hand view (where the channels would be) displays as all-pink, with no text visible. **Exact steps for others to reproduce the error** Switching to the Action Editor from the Dope Sheet view when there is no current active action makes the channel view area to the right turn pink. You may need to adjust the size of the view to trigger it. The Dope Sheet and Graph Editor behave properly and display the empty 'Summary' list.
williama added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-03-15 19:03:24 +01:00
Author

I just tested it on a Linux installation (PopOS with an Nvidia 4070ti GPU).

The same thing happens - although the view is all black instead of being pink.

I just tested it on a Linux installation (PopOS with an Nvidia 4070ti GPU). The same thing happens - although the view is all black instead of being pink.

I assume this is because there is no AnimData in scene. This would be normal behavior with some editors that have no context (Like VSE channels, if there is no sequencer data).

But the editor should at least draw background color, so will confirm

I assume this is because there is no `AnimData` in scene. This would be normal behavior with some editors that have no context (Like VSE channels, if there is no sequencer data). But the editor should at least draw background color, so will confirm
Richard Antalik added
Module
Animation & Rigging
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-15 20:35:47 +01:00
Member

Worked: 4.0.2

Raising the priority in that case (haven't checked yet, will do)

> Worked: 4.0.2 Raising the priority in that case (haven't checked yet, will do)
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2024-03-16 09:46:38 +01:00
Richard Antalik changed title from Pink Right-Hand View in Action Editor to Pink channels region in Action Editor 2024-03-16 18:17:02 +01:00
Member

Possibly platform specific. I'm unable to confirm on Windows. Empty panel is expected though.

Possibly platform specific. I'm unable to confirm on Windows. Empty panel is expected though.
Pratik Borhade added this to the 4.1 milestone 2024-03-17 06:49:38 +01:00
Member

Caused by a96f1208cc

CC @ChrisLend

Possible fix is up, see !119621

Caused by a96f1208cc729f2b4cfaf8152f80d49f627c82b5 CC @ChrisLend Possible fix is up, see !119621
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 14:06:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119534
No description provided.